--- a/generate-recurring-orders/package.json
+++ b/generate-recurring-orders/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "generate-all": "ts-node --project tsconfig.json src/generateOrders.ts && ts-node --project tsconfig.json src/generateDepthChart.ts"
   },
   "keywords": [],
   "author": "",
@@ -13,5 +13,9 @@
     "@types/node": "^22.0.2",
     "ts-node": "^10.9.2",
     "typescript": "^5.5.4"
+  },
+  "dependencies": {
+    "chart.js": "^3.9.1",
+    "chartjs-node-canvas": "^4.1.6"
   }
 }
