--- a/generate-recurring-orders/package.json
+++ b/generate-recurring-orders/package.json
@@ -16,6 +16,7 @@
   },
   "dependencies": {
     "chart.js": "^3.9.1",
-    "chartjs-node-canvas": "^4.1.6"
+    "chartjs-node-canvas": "^4.1.6",
+    "chartjs-plugin-datalabels": "^2.2.0"
   }
 }
